# fastapi-crud

./: .env  .gitignore  Dockerfile  alembic.ini  main.py  postmantest.txt  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: auth.py  deps.py  users.py
app/core/: config.py  security.py
app/schemas/: user.py
fastapi_crud_jwt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
